2006-11-10  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): work around sbcl's putenv bug

2006-11-09  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (:mapping-notify): update clx's key mappings

2006-11-05  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (maximize-window): set the window's position to 0,0

	* mode-line.lisp (mode-line-format-elt): ignore errors when calling eval.

2006-10-23  Shawn Betts  <sabetts@vcn.bc.ca>

	* mode-line.lisp (mode-line-format-elt): ignore errors for :eval

2006-10-23  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (*root-map*): bind "o" to fnext
	(horiz-split-frame): update window border color
	(vert-split-frame): likewise
	(remove-split): likewise
	("only"): likewise
	(focus-frame-after): new function
	(focus-next-frame): likewise
	(focus-prev-frame): likewise
	("fnext"): new command

	* stumpwm.lisp (init-atoms): intern wm_take_focus atom
	(stumpwm-internal-loop): produce debug output when ungrab is called
	(stumpwm-internal-loop): format error with ~a

	* primitives.lisp (*normal-border-width*): set to 1
	(*focus-color*): new global variable
	(*unfocus-color*): likewise
	(*window-parent-events*): likewise

	* mode-line.lisp (mode-line): new slot, position
	(*mode-line-border-width*): new global variable
	(*mode-line-pad-x*): likewise
	(*mode-line-pad-y*): likewise
	(*mode-line-background-color*): likewise
	(*mode-line-foreground-color*): likewise
	(*mode-line-border-color*): likewise
	(*screen-mode-line-format*): likewise
	(make-mode-line-window): set border color and width
	(resize-mode-line-for): new function
	(mode-line-format-elt): new method
	(mode-line-format-elt): handle new list cases
	(mode-line-format-string): just call mode-line-format-elt on
	mode-line-format
	(make-mode-line-gc): set the foreground according to mode-line colors
	(make-screen-mode-line): set position slot
	(redraw-mode-line-for): dont resize window
	(toggle-mode-line): new function
	("mode-line"): call toggle-mode-line
